feat: Introduce ClientPermissions and related entities for API access control
- Added ClientPermissions record to encapsulate effective permissions for client applications.
- Created ApiResourceEntity to represent API resources in the database.
- Introduced ClientAppRoleEntity to manage roles assigned to client applications.
- Added RoleApiPermissionEntity to define permissions associated with roles and API resources.
- Created RoleEntity to represent logical roles within the system.
- Updated ClientAppEntity to include a relationship with app roles.
- Implemented repositories for managing client app roles and role API permissions.
- Added migration scripts to create necessary database tables and seed initial data.
- Refactored tests to align with the new role and permission structure.